--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "create-conf",
   "description": "creates config file",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "homepage": "https://github.com/shootermv/create-conf",
   "author": "shootermv <shootermv@gmail.com>",
   "repository": {
@@ -39,5 +39,9 @@
   "directories": {
     "test": "test"
   },
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "commander": "^2.8.1",
+    "content-disposition": "^0.5.0"
+  }
 }
